--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/eleon479/hexipro/issues"
   },
-  "homepage": "https://github.com/eleon479/hexipro#readme"
+  "homepage": "https://github.com/eleon479/hexipro#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.5.4"
+  }
 }
