--- a/package.json
+++ b/package.json
@@ -1,9 +1,29 @@
 {
+  "name": "hexi",
+  "version": "0.3.0",
+  "description": "",
   "scripts": {
-    "start": "node src/index.js"
+    "__dev": "concurrently -k \"tsc -p ./src/server -w\" \"tsc -p ./src/client -w\" \"nodemon ./dist/server/server.js\"",
+    "clean": "rm -rf dist/",
+    "copy-files": "copyfiles -u 1 src/**/*.html src/**/*.css dist/",
+    "build": "npm run clean && tsc --build src && npm run copy-files",
+    "start": "npm run build && nodemon ./dist/server/server.js"
   },
+  "author": "Eddy Leon",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.6.0"
+    "express": "^4.18.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.4",
+    "@types/socket.io-client": "^1.4.36",
+    "concurrently": "^7.2.2",
+    "copyfiles": "^2.4.1",
+    "nodemon": "^2.0.19",
+    "rimraf": "^4.4.1",
+    "typescript": "^4.7.4"
   }
 }
