--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -3,10 +3,11 @@
     "target": "ES6",
     "module": "ES6",
     "outDir": "../../dist/client/",
+    "rootDir": ".",
     "baseUrl": ".",
     "paths": {},
     "moduleResolution": "node",
     "strict": true
   },
-  "include": ["**/*.ts"]
+  "include": ["./*.ts"]
 }
